implement all proyects

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <header id="header">
         <img  class="tdc-logo" src="./assets/img/logo.svg" alt="logo del taller">
         <div class="backgroundVideo">
-            <iframe src="https://player.vimeo.com/video/795675741?h=8c8507703b" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe>
+            <iframe src="https://player.vimeo.com/video/834477173?h=70b06a6837" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe>
         </div>
             
     </header>
@@ -41,7 +41,7 @@
                     </a>
                 </article>
                 <article class="container--card">
-                    <a href="training.html#conceptdesign">
+                    <a href="evasaurio.html">
                         <img src="./assets/img/proyectsCard/Rectangle5.png" alt="Evasaurio image">
                         <div class="overlay">
                             <p>Evasaurio</p>
@@ -49,7 +49,7 @@
                     </a>
                 </article>
                 <article class="container--card">
-                    <a href="training.html#conceptdesign">
+                    <a href="nina.html">
                         <img src="" alt="Nina & Bonifacio image">
                         <div class="overlay">
                             <p>Nina & Bonifacio</p>
@@ -57,7 +57,7 @@
                     </a>
                 </article>
                 <article class="container--card">
-                    <a href="training.html#conceptdesign">
+                    <a href="sira.html">
                         <img src="" alt="Sira image">
                         <div class="overlay">
                             <p>Sira</p>
