changes img trainig production desing and add img sira proyect

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                 </article>
                 <article class="container--card">
                     <a href="sira.html">
-                        <img src="" alt="Sira image">
+                        <img src="./assets/img/proyectsCard/sira.jpg" alt="Sira image">
                         <div class="overlay">
                             <p>Sira</p>
                         </div>
