--- a/training.html
+++ b/training.html
@@ -97,7 +97,7 @@
             </article>
             <article id="productiondesign" class="course-container">
                 <div class="course-container--img">
-                    <img src="./assets/img/Taller/Rectangle2-1.png" alt="Production Design">
+                    <img src="./assets/img/Taller/EugenioCaballero.jpg" alt="Production Design">
                 </div>
                 <div class="course-container--text">
                     <h2>Production Design</h2>
