modified container-detail humo

--- a/humo.html
+++ b/humo.html
@@ -32,7 +32,15 @@
                 <a href="index.html"><span></span></a>        
             </div>
             <div class="container-detail">
-                    <p>Shortfilm in Annecy’s oficial</p>
+                <div class="detail">
+                    <p>Short film</p>
+                </div>
+                <div class="detail">
+                    <p>11 minutes</p>
+                </div>
+                <div class="detail">
+                    <p>Annecy’s oficial</p>
+                </div>
             </div>
             <div class="proyect--text">
                 <h1>Smoke</h1>
