--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                 </article>
                 <article class="container--card">
                     <a href="nina.html">
-                        <img src="" alt="Nina & Bonifacio image">
+                        <img src="./assets/img/proyectsCard/Nina.jpg" alt="Nina & Bonifacio image">
                         <div class="overlay">
                             <p>Nina & Bonifacio</p>
                         </div>
