--- a/nina.html
+++ b/nina.html
@@ -25,7 +25,7 @@
         </section>
         <section class="section-det">
             <div class="container-cartel">
-                <img src="./assets/img/Evasaurio.png" alt="dolores image">
+                <img src="./assets/img/nina.png" alt="dolores image">
                 <a href="index.html"><span></span></a>        
             </div>
             <div class="container-detail">
