css changes for tablet

--- a/training.html
+++ b/training.html
@@ -25,62 +25,62 @@
             <div class="mentor-container">
                 <div class="mentor-card">
                     <img src="./assets/img/Mentores/EugenioCaballero.jpg" alt="">
-                    <p>Eugenio Caballero</p>
+                    <p>Eugenio<br>Caballero</p>
 
                 </div>
                 <div class="mentor-card">
                     <img src="./assets/img/Mentores/CarlosCarrera.jpg" alt="">
-                    <p>Carlos Carrera</p>
+                    <p>Carlos<br> Carrera</p>
 
                 </div>
                 <div class="mentor-card">
                     <img src="./assets/img/Mentores/SofiaCarrillo.jpg" alt="">
-                    <p>Sofía Carrillo</p>
+                    <p>Sofía<br> Carrillo</p>
 
                 </div>
                 <div class="mentor-card">
                     <img src="./assets/img/Mentores/LuisTellez.jpg" alt="">
-                    <p>Luis Téllez</p>
+                    <p>Luis<br> Téllez</p>
 
                 </div>
                 <div class="mentor-card">
                     <img src="./assets/img/Mentores/ReneCastillo.jpg" alt="">
-                    <p>René Castillo</p>
+                    <p>René<br> Castillo</p>
 
                 </div>
                 <div class="mentor-card">
                     <img src="./assets/img/Mentores/LeonFernandez.jpg" alt="">
-                    <p>León Fernandéz</p>
+                    <p>León<br> Fernandéz</p>
 
                 </div>
                 <div class="mentor-card">
                     <img src="./assets/img/Mentores/JuanMedina.jpg" alt="">
-                    <p>Juan Medina</p>
+                    <p>Juan<br> Medina</p>
 
                 </div>
                 <div class="mentor-card">
                     <img src="./assets/img/Mentores/RitaBasulto.jpg" alt="">
-                    <p>Rita Basulto</p>
+                    <p>Rita<br> Basulto</p>
 
                 </div>
                 <div class="mentor-card">
                     <img src="./assets/img/Mentores/MelanieCoombs.jpg" alt="">
-                    <p>Melanie Coombs</p>
+                    <p>Melanie<br> Coombs</p>
 
                 </div>
                 <div class="mentor-card">
                     <img src="./assets/img/Mentores/BrianLeifHansen.jpg" alt="">
-                    <p>Brian Leif Hansen</p>
+                    <p>Brian Leif<br> Hansen</p>
 
                 </div>
                 <div class="mentor-card">
                     <img src="./assets/img/Mentores/CruzContreras.jpg" alt="">
-                    <p>Cruz Contreras</p>
+                    <p>Cruz<br>Contreras</p>
 
                 </div>
                 <div class="mentor-card">
                     <img src="./assets/img/Mentores/RogerOlmos.jpg" alt="">
-                    <p>Roger Olmos</p>
+                    <p>Roger<br>Olmos</p>
 
                 </div>
             </div>
