--- a/dolores.html
+++ b/dolores.html
@@ -23,12 +23,12 @@
         <section class="section-proyect">
             <h1>Proyects</h1>
             <div class="ProyectVideo">
-                <iframe src="https://player.vimeo.com/video/832069549?h=36a289bdaa"  frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe>
+                <iframe src="https://player.vimeo.com/video/892434840?h=6faba6ce25" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe>
             </div>
         </section>
         <section class="section-det">
             <div class="container-cartel">
-                <img src="./assets/img/Dolores.png" alt="dolores image">
+                <img src="./assets/img/proyectsCard/Rectangle3.jpg" alt="dolores image">
                 <a href="index.html"><span></span></a>        
             </div>
             <div class="container-detail">
@@ -39,7 +39,7 @@
                     <p>7 minutes</p>
                 </div>
                 <div class="detail">
-                    <p>Post Production Stage</p>
+                    <p>Distribution</p>
                 </div>
             </div>
             <div class="proyect--text">
