--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <section class="container--slider">
                 <article class="container--card">
                     <a href="dolores.html">
-                        <img src="./assets/img/proyectsCard/Rectangle3.png" alt="Dolores image">
+                        <img src="./assets/img/proyectsCard/Rectangle3.jpg" alt="Dolores image">
                         <div class="overlay">
                             <p>Dolores</p>
                         </div>
