add page sperec.html

--- a/humo.html
+++ b/humo.html
@@ -28,7 +28,7 @@
         </section>
         <section class="section-det">
             <div class="container-cartel">
-                <img src="./assets/img/Humo.png" alt="dolores image">
+                <img src="./assets/img/proyectsCard/Rectangle4.png" alt="dolores image">
                 <a href="index.html"><span></span></a>        
             </div>
             <div class="container-detail">
@@ -39,7 +39,7 @@
                     <p>11 minutes</p>
                 </div>
                 <div class="detail">
-                    <p>Annecy’s oficial</p>
+                    <p>Annecy‘s official nominee</p>
                 </div>
             </div>
             <div class="proyect--text">
