--- a/index.html
+++ b/index.html
@@ -287,6 +287,27 @@
                 </article>
             </section>
             <div class="container--title">
+                <h2>Text random</h2>
+            </div>
+            <section class="container--slider">
+                <article class="container--card">
+                    <a href="sperec.html#specialization">
+                        <img src="./assets/img/Specialization_residencies/Convocatoria-Sueñosenmovimiento.jpg" alt="Concept Desing">
+                        <div class="overlay">
+                            <p>Specialization</p>
+                        </div>
+                    </a>
+                </article>
+                <article class="container--card">
+                    <a href="sperec.html#residencies">
+                        <img src="./assets/img/Specialization_residencies/Fotogramas-Graficos.jpg" alt="Production Design">
+                        <div class="overlay">
+                            <p>Residencies</p>
+                        </div>
+                    </a>
+                </article>
+            </section>
+            <div class="container--title">
                 <h2>Services</h2>
             </div>
             <section class="container--slider">
