--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <header id="header">
-        <img  class="tdc-logo" src="./assets/img/logo.svg" alt="logo del taller">
+        <img  class="tdc-logo" src="./assets/img/logo.png" alt="logo del taller">
         <div class="backgroundVideo">
             <iframe src="https://player.vimeo.com/video/834477173?h=70b06a6837" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe>
         </div>
