--- a/sperec.html
+++ b/sperec.html
@@ -16,7 +16,7 @@
             <a href="index.html"><img src="./assets/icons/material-symbols_arrow-back-ios-rounded.svg" alt="Regresar menu principal"></a>
         </div>
         <div class="logo">
-            <img src="./assets/img/logo.svg" alt="">
+            <img src="./assets/img/logo.png" alt="">
         </div>
     </header>
     <main id="main">
