--- a/index.html
+++ b/index.html
@@ -44,6 +44,14 @@
                     </a>
                 </article>
                 <article class="container--card">
+                    <a href="cuento-mar.html">
+                        <img src="./assets/img/proyectsCard/Cuento-de-mar.jpg" alt="Sira image">
+                        <div class="overlay">
+                            <p>Cuento del mar</p>
+                        </div>
+                    </a>
+                </article>
+                <article class="container--card">
                     <a href="evasaurio.html">
                         <img src="./assets/img/proyectsCard/Rectangle5.png" alt="Evasaurio image">
                         <div class="overlay">
