change image evasaurio not border radiuos

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                 </article>
                 <article class="container--card">
                     <a href="evasaurio.html">
-                        <img src="./assets/img/proyectsCard/Rectangle5.png" alt="Evasaurio image">
+                        <img src="./assets/img/Evasaurio.png" alt="Evasaurio image">
                         <div class="overlay">
                             <p>Evasaurio</p>
                         </div>
