add new reels 2024

--- a/training.html
+++ b/training.html
@@ -95,7 +95,7 @@
                         alt="Production Design image">
                 </div>
                 <div class="course-container--text">
-                    <h2>specialization</h2>
+                    <h2>Specialization</h2>
                     <p>The Specialization in Stop Motion Animation with a social emphasis, "Sueños en Movimiento"
                         ("Dreams in Motion"), is an intensive training and production program in high-profile stop
                         motion animation. Over a period of 5 months, students will cover 28 subjects grouped into the
