modified tales from the sea and time on nina & bonifacio

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                     <a href="cuento-mar.html">
                         <img src="./assets/img/proyectsCard/Cuento-de-mar.jpg" alt="Sira image">
                         <div class="overlay">
-                            <p>Cuento del mar</p>
+                            <p>Tale From the Sea</p>
                         </div>
                     </a>
                 </article>
