changed of text and img on sira

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                 </article>
                 <article class="container--card">
                     <a href="sira.html">
-                        <img src="./assets/img/proyectsCard/sira.jpg" alt="Sira image">
+                        <img src="./assets/img/SIRA.jpg" alt="Sira image">
                         <div class="overlay">
                             <p>Sira</p>
                         </div>
