news short films in project 2024

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <header id="header">
         <img class="tdc-logo" src="./assets/img/logo.png" alt="logo del taller">
         <div class="backgroundVideo">
-                <iframe src="https://player.vimeo.com/video/908876452?h=067c47692b" frameborder="0"
+            <iframe src="https://player.vimeo.com/video/908876452?h=067c47692b" frameborder="0"
                 allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe>
         </div>
 
@@ -36,26 +36,10 @@
                     </a>
                 </article>
                 <article class="container--card">
-                    <a href="humo.html">
-                        <img src="./assets/img/proyectsCard/Rectangle4.png" alt="Smoke image">
-                        <div class="overlay">
-                            <p>Smoke</p>
-                        </div>
-                    </a>
-                </article>
-                <article class="container--card">
                     <a href="cuento-mar.html">
                         <img src="./assets/img/proyectsCard/Cuento-de-mar-2.jpg" alt="Sira image">
                         <div class="overlay">
                             <p>Tale From the Sea</p>
-                        </div>
-                    </a>
-                </article>
-                <article class="container--card">
-                    <a href="evasaurio.html">
-                        <img src="./assets/img/Evasaurio.png" alt="Evasaurio image">
-                        <div class="overlay">
-                            <p>Evasaurio</p>
                         </div>
                     </a>
                 </article>
@@ -72,6 +56,55 @@
                         <img src="./assets/img/SIRA.jpg" alt="Sira image">
                         <div class="overlay">
                             <p>Sira</p>
+                        </div>
+                    </a>
+                </article>
+                <article class="container--card">
+                    <a href="ramas.html">
+                        <img src="./assets/img/Ramas-torcidas.jpg" alt="Ramas torcidas image">
+                        <div class="overlay">
+                            <p>The Crooked Branches</p>
+                        </div>
+                    </a>
+                </article>
+                <article class="container--card">
+                    <a href="valle.html">
+                        <img src="./assets/img/El-valle-de-los-hombres-sin-rostro.jpg"
+                            alt="El valle de los hombre sin rostro image">
+                        <div class="overlay">
+                            <p>The Valley of Faceless Men</p>
+                        </div>
+                    </a>
+                </article>
+                <article class="container--card">
+                    <a href="teatro.html">
+                        <img src="./assets/img/Teatro-secreto.jpg" alt="Teatro secreto image">
+                        <div class="overlay">
+                            <p>SECRET TEATHER</p>
+                        </div>
+                    </a>
+                </article>
+                <article class="container--card">
+                    <a href="adentro.html">
+                        <img src="./assets/img/Desde-adentro.jpg" alt="Desde adentro image">
+                        <div class="overlay">
+                            <p>FROM WITHIN</p>
+                        </div>
+                    </a>
+                </article>
+                <article class="container--card">
+                    <a href="vestigio.html">
+                        <img src="./assets/img/Vestigio.jpg" alt="Vestigio image">
+                        <div class="overlay">
+                            <p>Vestige</p>
+                        </div>
+                    </a>
+                </article>
+                <article class="container--card">
+                    <a href="renacer.html">
+                        <img src="./assets/img/Renacer.jpg" alt="Renacer image">
+                        <div class="overlay">
+                            <p>Born again</p>
                         </div>
                     </a>
                 </article>
