change title whithin and teather lowercase

--- a/adentro.html
+++ b/adentro.html
@@ -40,7 +40,7 @@
                 </div>
             </div>
             <div class="proyect--text">
-                <h1>FROM WITHIN</h1>
+                <h1>From Within</h1>
                 <p>Marquillos, the dreamy and childlike side of Marco, embarks on a thrilling journey after an
                     unexpected sign, guided by the promise of a new future where he must confront his deepest fears,
                     insecurities, and the haunting ghosts of his past.</p>
