--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                     <a href="teatro.html">
                         <img src="./assets/img/Teatro-secreto.jpg" alt="Teatro secreto image">
                         <div class="overlay">
-                            <p>SECRET TEATHER</p>
+                            <p>Secret Teather</p>
                         </div>
                     </a>
                 </article>
@@ -88,7 +88,7 @@
                     <a href="adentro.html">
                         <img src="./assets/img/Desde-adentro.jpg" alt="Desde adentro image">
                         <div class="overlay">
-                            <p>FROM WITHIN</p>
+                            <p>From Within</p>
                         </div>
                     </a>
                 </article>
