--- a/teatro.html
+++ b/teatro.html
@@ -40,7 +40,7 @@
                 </div>
             </div>
             <div class="proyect--text">
-                <h1>SECRET TEATHER</h1>
+                <h1>Secret Teather</h1>
                 <p>An old woman offers a lock of her hair to one of her artifacts; a magical puppet theater. She turns
                     the crank, and it gives her a gift. The woman keeps turning it, and the puppet theater absorbs her
                     into a dream, starting a performance of puppets and insects where her presence will illuminate life.
