add H1 news cards

--- a/valle.html
+++ b/valle.html
@@ -23,6 +23,13 @@
         </div>
     </header>
     <main id="main">
+        <section class="section-proyect">
+            <h1>Proyects</h1>
+            <div class="ProyectVideo">
+                <iframe src="https://player.vimeo.com/video/892434840?h=6faba6ce25" frameborder="0"
+                    allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe>
+            </div>
+        </section>
         <section class="section-det">
             <div class="container-cartel">
                 <img src="./assets/img/El-valle-de-los-hombres-sin-rostro.jpg" alt="dolores image">
