--- a/ramas.html
+++ b/ramas.html
@@ -23,6 +23,9 @@
         </div>
     </header>
     <main id="main">
+        <section class="section-proyect">
+            <h1>Proyects</h1>
+        </section>
         <section class="section-det">
             <div class="container-cartel">
                 <img src="./assets/img/Ramas-torcidas.jpg" alt="dolores image">
